# rust-full-stack-example

./: README.md  tree.txt
backend/: .gitignore  Cargo.toml  dev_commands.txt
backend/migrations/: V1__create_users_table.sql  V2__create_users_table_nodrop copy.sql  V3__create_income_table copy 2.sql  V4__drop_income_table.sql  V5__create_income_table_unsigned_amount.sql  V6__alter_income_table_unsigned_user_id.sql
backend/migrations/down/: 002_drop_income_and_expense.sql  003_drop_sessions.sql
backend/migrations/up/: 001_create_users.sql  002_create_income_and_expense.sql  003_create_sessions.sql
backend/src/: main.rs
backend/src/api/: auth_routes.rs  income_routes.rs  mod.rs  user_routes.rs
backend/src/db/: connection.rs  income_repository.rs  mod.rs  user_repository.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  session.rs
frontend/: Cargo.toml  build.rs  index.html  main.css
frontend/sass/: _base.scss  _card.scss  _dashboard.scss  _layout.scss  _utils.scss  _vars.scss  main.scss
frontend/src/: active_card.rs  api_error.rs  main.rs
frontend/src/components/: card_manager.rs  dashboard.rs  footer.rs  header.rs  main_content.rs  navbar.rs  tooltip.rs
frontend/src/components/card_components/: add_income_form.rs  manage_demo_profiles_card.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: expense_fixed.rs  income.rs  mod.rs  user.rs
