[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
shared = { path = "../shared" }

rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql", "macros"] }
dotenvy = "0.15.7"
tokio = { version = "1.26.0", features = ["full"] }
rocket_cors = "0.5.2"
rocket_http = "0.5.0-rc.3"
# gcp_auth = "0.8.0"
reqwest = {version = "0.11.16", features = ["json"]}
jsonwebtoken = "7.2.0"
async-trait = "0.1.68"
serde_json = "1.0.70"